--- a/src/styles/components/Apps.scss
+++ b/src/styles/components/Apps.scss
@@ -31,8 +31,11 @@
   font-size: 14px;
   line-height: 1.3;
   color: var(--el-text-color-regular);
-  /* white-space: pre-wrap;
-  word-wrap: break-word; */
+}
+
+.apps-scroll-content code {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .apps-scroll-content-loading {
