--- a/src/styles/components/QuickFeatureCard.scss
+++ b/src/styles/components/QuickFeatureCard.scss
@@ -6,3 +6,16 @@
   transform: translate(-50%, -50%);
   z-index: 3000;
 }
+
+.quick-feature-card-scroll-content {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  color: var(--el-text-color-regular);
+  padding: 20px;
+}
+
+.quick-feature-card-scroll-content code {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
