--- a/src/content/index.scss
+++ b/src/content/index.scss
@@ -1,8 +1,19 @@
+.cremind-sidebar {
+  width: calc(100% - 450px) !important;
+}
+
 .app-cremind-features {
   position: fixed;
   right: 8px;
   bottom: 160px;
-  z-index: 1000000000;
+  z-index: 2147483647;
+}
+
+.app-settings-sidebar {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2000;
 }
 
 .app-settings {
@@ -39,4 +50,54 @@
 .app-apps:hover {
   font-weight: bold;
   opacity: 1;
+}
+
+.app-sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 450px;
+  z-index: 2147483647;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--el-bg-color);
+}
+
+.app-sidebar-card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.app-sidebar-card .el-card__body {
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.app-sidebar-child-full {
+  position: relative;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.app-sidebar-child-full .el-card {
+  --el-card-border-color: var(--el-border-color-light);
+  --el-card-border-radius: 4px;
+  --el-card-padding: 20px;
+  --el-card-bg-color: var(--el-fill-color-blank);
+}
+
+.app-sidebar-child-full .el-card__body {
+  padding: var(--el-card-padding);
+}
+
+.apps-maximize-icon {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  z-index: 1;
 }
