--- a/src/styles/components/AppsDialog.scss
+++ b/src/styles/components/AppsDialog.scss
@@ -8,14 +8,16 @@
 .apps-dialog-minimize-icon {
   position: absolute;
   top: 8px;
-  right: 36px;
+  right: 8px;
+  // right: 36px;
   cursor: pointer;
 }
 
 .apps-dialog-close-icon {
   position: absolute;
   top: 8px;
-  right: 64px;
+  right: 36px;
+  // right: 64px;
   cursor: pointer;
 }
 
@@ -23,4 +25,53 @@
   position: fixed;
   right: 5px;
   bottom: 180px;
+}
+
+.custom-dialog {
+  position: fixed;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2147483647;
+  transition: width 0.3s, height 0.3s;
+}
+
+.custom-dialog .custom-dialog-content {
+  background-color: var(--el-bg-color);
+  border-radius: 14px;
+}
+
+.custom-dialog.maximized {
+  width: 100%;
+  height: 100%;
+}
+
+.custom-dialog-header {
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: var(--cremind-logo-color-dark);
+  border-top-right-radius: 14px;
+  border-top-left-radius: 14px;
+}
+
+.custom-dialog-body {
+  padding: 0px;
+}
+
+.custom-dialog-title {
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.3;
+  margin-right: auto;
 }
