--- a/src/styles/components/Chat/BallonChat.scss
+++ b/src/styles/components/Chat/BallonChat.scss
@@ -62,3 +62,8 @@
   line-height: 1.3;
   color: rgb(227, 227, 227);
 }
+
+.ballon-chat-chat-message-content p {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
