--- a/src/styles/components/ChatBox.scss
+++ b/src/styles/components/ChatBox.scss
@@ -10,15 +10,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: var(--cremind-logo-color-dark);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
 }
 
 .chatbox-chat {
-  padding: 10px;
-}
-
-.chatbox-chat .el-scrollbar {
-  min-height: 200px;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
