--- a/src/styles/components/ChatDialog.scss
+++ b/src/styles/components/ChatDialog.scss
@@ -2,13 +2,13 @@
   border-radius: 15px;
 }
 
-.chat-dialog-header {
+.chat-dialog-main .chat-dialog-header {
   position: absolute;
   height: 80px;
   width: 100%;
 }
 
-.chat-dialog-minimize-icon {
+.chat-dialog-main .chat-dialog-minimize-icon {
   position: absolute;
   top: 8px;
   right: 36px;
@@ -16,7 +16,7 @@
   z-index: 1;
 }
 
-.chat-dialog-close-icon {
+.chat-dialog-main .chat-dialog-close-icon {
   position: absolute;
   top: 8px;
   right: 8px;
