--- a/src/styles/components/PromptApp.scss
+++ b/src/styles/components/PromptApp.scss
@@ -18,11 +18,16 @@
   align-items: center;
 }
 
-.prompt-app-category-block {
-  position: absolute;
-  right: 5px;
-  top: 0px;
-  width: 100px;
+.prompt-app-category-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px 30px;
+}
+
+.prompt-app-category-text {
+  margin-right: 10px;
+  font-size: 18px;
 }
 
 .prompt-app-pagination-block {
