Fix Upload loading end message

--- a/src/content/index.scss
+++ b/src/content/index.scss
@@ -121,7 +121,7 @@
   padding: var(--el-card-padding);
 }
 
-.app-sidebar .apps-maximize-icon {
+.app-sidebar .app-maximize-icon {
   position: absolute;
   top: 8px;
   right: 8px;
